--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@expo/vector-icons": "latest",
     "axios": "^0.16.2",
     "expo": "17.0.0",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-17.0.0.tar.gz",
+    "react-native-elements": "^0.12.2",
     "react-native-extended-stylesheet": "^0.4.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
